fixed image and background sizing/overflow issue in contacthome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,8 +62,10 @@
   background-color: rgba(255, 0, 0, 0.575);
   pointer-events: none;
 }
-.maxHeight {
-  max-height: 600px;
+@media (max-width: 639px) {
+  .maxHeight {
+    max-height: 450px;
+  }
 }
 @media (min-width: 377px) {
   .smClientDiv {
